c2pa-tui/tests/snapshots/snapshot_ui__compare_view_no_diff_loaded_shows_placeholder.snap
---
source: c2pa-tui/tests/snapshot_ui.rs
expression: content
---
┌Files──────────────────┐┌Compare──────────────────────────────────────────────────────────────────┐
│[ ] a.jpg              ││Left manifest not loaded — press Enter to load                           │
│[ ] b.jpg              ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
└───────────────────────┘└─────────────────────────────────────────────────────────────────────────┘
Comparing  Esc:exit compare
