c2pa-tui/tests/snapshots/snapshot_ui__compare_view_show_all_includes_equal_rows.snap
---
source: c2pa-tui/tests/snapshot_ui.rs
expression: content
---
┌Files───────────────────────┐Field.jpg──────────────────test.jpg────────────────────────other.jpg─────────────────────┐
│[✓] test.jpg                │┌Compare — 3 differences (showing all)  [a] hide equal───────────────────────────────────┐
│[✓] other.jpg               ││Claimertions               Claim: <missing>               Claim: <missing>              │
│                            ││Claim.format               format: image/jpeg             format: image/png             │
│                            ││Claim.title                title: Test Photo              title: Other Photo            │
│                            ││Assertions                 Assertions: <missing>          Assertions: <missing>         │
│                            ││Assertions.c2pa.hash.data  c2pa.hash.data: <missing>      c2pa.hash.data: <missing>     │
│                            ││Assertions.c2pa.hash.data. alg: sha256                    alg: sha512                   │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────┘
Comparing  Esc:exit compare
