c2pa-tui/tests/snapshots/snapshot_ui__detail_pane_hide_empty_removes_blank_fields.snap
---
source: c2pa-tui/tests/snapshot_ui.rs
expression: content
---
┌Files──────────────────┐┌test.jpg─────────────────────────────────────────────────────────────────┐
│[✓] test.jpg           ││▼ Claim                                                                  │
│                       ││    title: Test Photo                                                    │
│                       ││    format: image/jpeg                                                   │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
└───────────────────────┘└─────────────────────────────────────────────────────────────────────────┘
↑/↓:nav  Enter:load  Tab:focus  /:search  f:filter  c:compare  r:reload  ?:help  q:quit
