c2pa-tui/tests/snapshots/snapshot_ui__error_overlay_is_rendered_centered.snap
---
source: c2pa-tui/tests/snapshot_ui.rs
expression: content
---
┌Files──────────────────┐┌Detail───────────────────────────────────────────────────────────────────┐
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                   ┌Error─────────────────────────────────────────────────────┐                   │
│                   │Something went wrong                                      │                   │
│                   │   ││                                                     │                   │
│                   └──────────────────────────────────────────────────────────┘                   │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
└───────────────────────┘└─────────────────────────────────────────────────────────────────────────┘
Error — press any key to dismiss
