c2pa-tui/tests/snapshots/snapshot_ui__filter_bar_renders_preview.snap
---
source: c2pa-tui/tests/snapshot_ui.rs
assertion_line: 283
expression: content
---
┌Files──────────────────┐┌test.jpg─────────────────────────────────────────────────────────────────┐
│[✓] test.jpg           ││▶ Claim                                                                  │
│                       ││▶ Assertions                                                             │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                   ┌Filter (glob, e.g. assertions.*)──────────────────────────┐                   │
│                   │> Assertions.*                                            │                   │
│                   └──────────────────────────────────────────────────────────┘                   │
│                   Preview (Enter to apply, Esc to cancel):                                       │
│                   ────────────────────────────────────────────────────────────                   │
│                     Assertions (1)                                                               │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
└───────────────────────┘└─────────────────────────────────────────────────────────────────────────┘
Type glob filter (e.g. assertions.*)  Enter:apply  Esc:cancel
