c2pa-tui/tests/snapshots/snapshot_ui__filter_bar_shows_error_for_invalid_glob.snap
---
source: c2pa-tui/tests/snapshot_ui.rs
assertion_line: 295
expression: content
---
┌Files──────────────────┐┌test.jpg─────────────────────────────────────────────────────────────────┐
│[✓] test.jpg           ││▶ Claim                                                                  │
│                       ││▶ Assertions                                                             │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                   ┌Filter (glob, e.g. assertions.*)──────────────────────────┐                   │
│                   │> [invalid                                                │                   │
│                   └──────────────────────────────────────────────────────────┘                   │
│                   Invalid pattern: invalid glob pattern: Pattern syntax error                    │
│                   ────────────────────────────────────────────────────────────                   │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
└───────────────────────┘└─────────────────────────────────────────────────────────────────────────┘
Type glob filter (e.g. assertions.*)  Enter:apply  Esc:cancel
