c2pa-tui/tests/snapshots/snapshot_ui__light_theme_renders_loaded_manifest.snap
---
source: c2pa-tui/tests/snapshot_ui.rs
expression: content
---
┌Files─────────────┐┌photo.jpg─────────────────────────────────────────────────┐
│[✓] photo.jpg     ││▶ Claim                                                   │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
↑/↓:nav  Enter:load  Tab:focus  /:search  f:filter  c:compare  r:reload  ?:help
