c2pa-tui/tests/snapshots/snapshot_ui__search_bar_renders_with_query.snap
---
source: c2pa-tui/tests/snapshot_ui.rs
assertion_line: 271
expression: content
---
┌Files──────────────────┐┌test.jpg─────────────────────────────────────────────────────────────────┐
│[✓] test.jpg           ││▶ Claim                                                                  │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│              ┌Search──────────────────────────────────────────────────────────────┐              │
│              │> jpeg  ││                                                          │              │
│              └────────────────────────────────────────────────────────────────────┘              │
│              ┌1 matches───────────────────────────────────────────────────────────┐              │
│              │format: image/jpeg                                                  │              │
│              │        ││                                                          │              │
│              │        ││                                                          │              │
│              │        ││                                                          │              │
│              │        ││                                                          │              │
│              │        ││                                                          │              │
│              │        ││                                                          │              │
│              │        ││                                                          │              │
│              │        ││                                                          │              │
│              │        ││                                                          │              │
│              └────────────────────────────────────────────────────────────────────┘              │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
└───────────────────────┘└─────────────────────────────────────────────────────────────────────────┘
Type to search  Esc:cancel
